# Freeframe

./: .gitignore  CMakeLists.txt  Plugin ID List.txt  README.md
FreeFrame/: CMakeLists.txt  freeframe.pro
FreeFrame/ff10/Framework/: FrameBuffer.cpp  FrameBuffer.h  FrameConvert.cpp  FrameConvert.h  Framework.vcproj  FreeFrame.h  FreeFrameInstance.cpp  FreeFrameInstance.h  FreeFramePlugin.cpp  FreeFramePlugin.h  Stream.cpp  Stream.h  StreamDecoder.cpp  StreamDecoder.h  StreamDecoderFactory.cpp  StreamDecoderFactory.h  StreamDecoderMemory.cpp  StreamDecoderMemory.h  StreamDecoderTCP.cpp  StreamDecoderTCP.h  StreamDecoderUDP.cpp  StreamDecoderUDP.h  StreamEncoder.cpp  StreamEncoder.h  StreamEncoderFactory.cpp  StreamEncoderFactory.h  StreamEncoderMemory.cpp  StreamEncoderMemory.h  StreamEncoderTCP.cpp  StreamEncoderTCP.h  StreamEncoderUDP.cpp  StreamEncoderUDP.h  StreamMemory.h
FreeFrame/ff10/fugBlender/: FrameStore.cpp  FrameStore.h  FreeFrame.def  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  ReadMe.txt  fugBlender.vcproj  stdafx.cpp
FreeFrame/ff10/fugChromaParallax/: Factory.cpp  FreeFrame.def  Instance.cpp  Plugin.cpp  Plugin.h  fugChromaParallax.vcproj
FreeFrame/ff10/fugHueKey/: Factory.cpp  FreeFrame.def  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  fugHueKey.vcproj
FreeFrame/ff10/fugLuma3D/: FreeFrame.def  Instance.cpp  Instance.h  Luma3D.vcproj  Plugin.cpp  Plugin.h
FreeFrame/ff10/fugLumaBendMask/: FreeFrame.def  Instance.cpp  Instance.h  Plugin.cpp  fugLumaBendMask.vcproj
FreeFrame/ff10/fugLumaParallax/: FreeFrame.def  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  ReadMe.txt  fugLumaParallax.vcproj  stdafx.h
FreeFrame/ff10/fugMidiOut/: FreeFrame.def  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  fugMidiOut.vcproj
FreeFrame/ff10/fugMotionMatte/: FreeFrame.cpp  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  fugMotionMatte.vcproj  stdafx.h
FreeFrame/ff10/fugRGBChannelKey/: Factory.cpp  FreeFrame.def  Instance.cpp  Plugin.cpp  Plugin.h  RGBChannelKey.vcproj
FreeFrame/ff10/fugRGBKey/: Factory.cpp  FreeFrame.def  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  RGBKey.vcproj
FreeFrame/ff10/fugRGBMixer/: Factory.cpp  FreeFrame.def  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  RGBMixer.vcproj  stdafx.h
FreeFrame/ff10/fugScope/: AudioCapture.cpp  AudioCapture.h  Factory.cpp  FreeFrame.def  FreeFrameDll.cpp  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  Scope.vcproj
FreeFrame/ff10/fugSobel/: Factory.cpp  FreeFrame.def  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  fugSobel.vcproj  stdafx.cpp
FreeFrame/ff10/fugStreamReceive/: FreeFrame.def  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  fugStreamReceive.vcproj
FreeFrame/ff10/fugStreamRecord/: AVIGenerator.cpp  AVIGenerator.h  StreamRecordApp.cpp  StreamRecordApp.h  StreamRecordDialog.cpp  StreamRecordDialog.h  fugStreamRecord.vcproj  resource.h  stdafx.h
FreeFrame/ff10/fugStreamSend/: FreeFrame.def  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  fugStreamSend.vcproj  stdafx.h
FreeFrame/ff10/fugThermal/: FreeFrame.def  (+5 more)
FreeFrame/ffgl/: CMakeLists.txt
FreeFrame/ffgl/fugCompilerGL/: CMakeLists.txt  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h
FreeFrame/ffgl/fugFeedbackGL/: CMakeLists.txt  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  fugFeedback_FF16.vert  fugFeedback_FF20.frag
FreeFrame/ffgl/fugGlitchGL/: CMakeLists.txt  FindJPEGTURBO.cmake  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  fugGlitchGL.pro
FreeFrame/ffgl/fugPowerGL/: CMakeLists.txt  FindPortAudio.cmake  fugPowerGL.pro  instance.cpp  instance.h  plugin.cpp  plugin.h
FreeFrame/ffgl/fugScopeGL/: CMakeLists.txt  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  fugScopeGL.pro
FreeFrame/ffgl/fugVidRcv2GL/: Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  fugVidRcv2GL.pro
FreeFrame/ffgl/fugVidSnd2GL/: Instance.cpp  Instance.h  Plugin.cpp  Plugin.h  fugVidSnd2GL.pro
FreeFrame/ffgl/fugWrapperGL/: CMakeLists.txt  Instance.cpp  Instance.h  Plugin.cpp  Plugin.h
FreeFrame/shared/: AudioWindow.cpp  AudioWindow.h  FFT.h  InstanceBase.cpp  InstanceBase.h  Library.cpp  Library.def  PluginBase.cpp  PluginBase.h  Shader.cpp  Shader.h  TexToBuf.cpp  TexToBuf.h
fugVidStream/: fugVidStream.pro
fugVidStream/fugScreenCapture/: fugScreenCapture.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  windowcapture.cpp  windowcapture.h  windowcapturebase.cpp  windowcapturebase.h  wingetclientrect.cpp  wingetclientrect.h  winprintwindow.cpp  winprintwindow.h
fugVidStream/fugSyphonReceive/: fugSyphonReceive.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  syphonoutput.cpp  syphonoutput.h  syphonsend.h  syphonsend.mm
fugVidStream/fugSyphonSend/: fugSyphonSend.pro  mainwindow.h
fugVidStream/fugVidStreamLib/: ImageCompression.cpp  ImageCompression.h  ImageConvert.cpp  ImageConvert.h  Stream.cpp  Stream.h  StreamDecoder.cpp  StreamDecoder.h  StreamDecoderFactory.cpp  StreamDecoderFactory.h  StreamDecoderMemory.cpp  StreamDecoderMemory.h  StreamDecoderTCP.cpp  StreamDecoderTCP.h  StreamDecoderUDP.cpp  StreamDecoderUDP.h  StreamEncoder.cpp  StreamEncoder.h  StreamEncoderConfig.cpp  StreamEncoderConfig.h  StreamEncoderFactory.cpp  StreamEncoderFactory.h  StreamEncoderMemory.cpp  StreamEncoderMemory.h  StreamEncoderTCP.cpp  StreamEncoderTCP.h  StreamEncoderUDP.cpp  StreamEncoderUDP.h  StreamMemory.h  StreamThread.cpp  StreamThread.h  fugVidStream.cpp  fugVidStream.def  fugVidStream.h  fugVidStreamLib.pro
fugVidStream/fugVidStreamTests/: fugVidStreamTests.cpp  fugVidStreamTests.pro  teststream.cpp  teststream.h
fugVidStream/fugVidStreamTool/: fugVidStreamTool.pro  fugstreamdecoder.cpp  fugstreamdecoder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
readme/: fugFeedbackGL.txt  fugGlitch.txt  fugGlitchGL.txt  fugPowerGL.txt  fugScopeGL.txt  fugSyphonReceive.txt  fugVidRcv2.txt  fugVidRcv2GL.txt  fugVidSnd2.txt  fugVidSnd2GL.txt  fugVidStreamLib.txt  fugVidStreamTool.txt
tester/: CMakeLists.txt  freeframe_params_tester.cpp  freeframe_params_tester.h  freeframe_render_tester.cpp  freeframe_render_tester.h
(+31 files in other folders)
